# stm32-keypad

./: Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml  flash.sh
src/: buttons.rs  config.rs  handlers.rs  main.rs
